--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/images/Dev.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/Dev.svg" />
     <link href="/src/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Juan Villaverde - Portfolio</title>
