añadido certificaciones y tema blanco y negro y algunas mejoras visuales

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link href="/src/index.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Juan Villaverde - Portfolio</title>
+
+    <meta property="og:title" content="Juan Villaverde" />
+    <meta property="og:description" content="Desarrollador de software" />
+    <meta property="og:image" content="https://juanvillaver.de/assets/Yo.jpg" />
+    <meta property="og:url" content="https://juanvillaver.de/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Juan Villaverde" />
+
+
   </head>
   <body>
     <div id="root"></div>
